tests/fixtures/invalid/list_sub_bytes.py
# Cannot subtract List[int] and Bytes
x: list[int] = [1, 2, 3] - b"hello"
